lab1 modification for generality

--- a/Computer_vision/Lab1/task1.ipynb
+++ b/Computer_vision/Lab1/task1.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,17 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "! rm output.avi\n",
-    "frame_width=256\n",
-    "frame_height=256\n",
+    "\n",
+    "frame_width=640\n",
+    "frame_height=480\n",
     "out = cv2.VideoWriter('output.avi',cv2.VideoWriter_fourcc('X','V','I','D'), 10, (frame_width,frame_height))\n",
     "\n",
     "counter=0\n",
-    "frame=np.zeros((256,256,3),np.uint8)\n",
+    "frame=np.zeros((frame_height,frame_width,3),np.uint8)\n",
     "while (1):\n",
     "    if counter!=100:\n",
     "        frame[:,:,:]=np.random.rand(1,3)*255\n",
@@ -62,7 +63,7 @@
     "        cv2.imshow('frame',frame)\n",
     "        key=cv2.waitKey(20)\n",
     "        if key==ord('q'):\n",
-    "            break\n",
+    "            breakS\n",
     "        counter+=1\n",
     "    else:\n",
     "\n",
