--- a/Computer_vision/Lab1/task2.ipynb
+++ b/Computer_vision/Lab1/task2.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,25 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "! rm output2.avi\n",
     "\n",
-    "frame_width=256\n",
-    "frame_height=256\n",
+    "frame_width=640\n",
+    "frame_height=480\n",
     "out = cv2.VideoWriter('output2.avi',cv2.VideoWriter_fourcc('X','V','I','D'), 1, (frame_width,frame_height))\n",
     "\n",
     "counter=0\n",
-    "frame=np.zeros((256,256,3),np.uint8)\n",
+    "frame=np.zeros((frame_height,frame_width,3),np.uint8)\n",
     "while (1):\n",
     "    if counter!=10:\n",
-    "        frame=np.zeros((256,256,3),np.uint8)\n",
+    "        frame=np.zeros((frame_height,frame_width,3),np.uint8)\n",
     "        rand_x=int(np.random.rand(1)*255)\n",
     "        rand_y=int(np.random.rand(1)*255)\n",
-    "        frame[rand_x,:,:]=list(np.random.rand(1,3)*255) * 256\n",
-    "        frame[:,rand_y,:]=list(np.random.rand(1,3)*255) * 256\n",
+    "        frame[rand_x,:,:]=list(np.random.randn(1,3)*255) * frame_width\n",
+    "        frame[:,rand_y,:]=list(np.random.randn(1,3)*255) * frame_height\n",
     "        out.write(frame)\n",
     "        cv2.imshow('frame',frame)\n",
     "        key=cv2.waitKey(1000)\n",
@@ -75,28 +75,6 @@
     "\n",
     "out.release()\n",
     "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(256, 3)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 38
-    }
-   ],
-   "source": [
-    "#int(np.random.rand(1)*255)\n",
-    "x=list(np.random.rand(1,3)) * 256\n",
-    "np.array(x).shape"
    ]
   },
   {
