--- a/Computer_vision/lab5/lab5.ipynb
+++ b/Computer_vision/lab5/lab5.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,16 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "rm: cannot remove 'output2.avi': No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "! rm output2.avi\n",
     "cap = cv2.VideoCapture(\"Lanes.mp4\") \n",
     "counter=0\n",
     "frame_width=1280\n",
     "frame_height=720\n",
-    "outvid = cv2.VideoWriter('output2.avi',cv2.VideoWriter_fourcc('X','V','I','D'), 1, (frame_width,frame_height))\n",
+    "outvid = cv2.VideoWriter('output2.avi',cv2.VideoWriter_fourcc('X','V','I','D'), 50, (frame_width,frame_height))\n",
     "\n",
     "while (cap.isOpened()):\n",
     "    ret,frame=cap.read()\n",
@@ -64,6 +72,9 @@
     "        ret1, out1 = cv2.threshold(frame[:,:,1], 190, 255, cv2.THRESH_BINARY)\n",
     "        ret2, out2 = cv2.threshold(frame1[:,:,0], 200, 255, cv2.THRESH_BINARY)\n",
     "        out = np.logical_and(out1, out2).astype(np.uint8) * 255\n",
+    "\n",
+    "        out = cv2.cvtColor(out, cv2.COLOR_GRAY2RGB)\n",
+    "\n",
     "        outvid.write(out)\n",
     "        cv2.imshow('frame',out)\n",
     "        key=cv2.waitKey(1)\n",
