--- a/Computer_vision/contours_lab/contours_lab.ipynb
+++ b/Computer_vision/contours_lab/contours_lab.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -77,7 +77,7 @@
     "while True:\n",
     "    cv2.imshow('Contours',img)                 \n",
     "    if cv2.waitKey(1) & 0xFF == 27:\n",
-    "        plt.imsave(\"out1.jpg\",img)\n",
+    "        plt.imsave(\"out1.jpg\",img[:,:,::-1])\n",
     "        break\n",
     "cv2.destroyAllWindows()"
    ]
