--- a/Computer_vision/contours_lab/contours_lab.ipynb
+++ b/Computer_vision/contours_lab/contours_lab.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -68,11 +68,12 @@
     "    cx = int(M['m10']/M['m00'])\n",
     "    cy = int(M['m01']/M['m00'])\n",
     "    #cv2.putText(img,str(area), (cx, cy), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255),1)\n",
-    "    if (area==371.0 or area==468.0 or area==569.0):\n",
+    "    #if (area==371.0 or area==468.0 or area==569.0):\n",
+    "    if(area > 370.9 and area < 569.1):\n",
     "        cv2.drawContours(img, [c], 0, (255, 255, 255),thickness=-1)\n",
-    "    if (area==12433.0):\n",
+    "    if (area < 12433.1 and area > 12432.9): #12433\n",
     "        cv2.drawContours(img, [c], 0, (255, 0, 0),thickness=-1)\n",
-    "    if (area==49299.0):\n",
+    "    if (area < 49299.1 and area > 49298.9):\n",
     "        cv2.drawContours(img, [c], 0, (0, 0, 255),thickness=-1)\n",
     "while True:\n",
     "    cv2.imshow('Contours',img)                 \n",
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
